kubernetes/apps/observability/victoria-logs/app/victorialogs-envoy-securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victorialogs-ui-oidc
  namespace: observability
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoria-logs-server
  oidc:
    provider:
      issuer: "https://authentik.${SECRET_DOMAIN}/application/o/victorialogs"
      authorizationEndpoint: https://authentik.ciliumvalley.com/application/o/authorize/
      tokenEndpoint: https://authentik.ciliumvalley.com/application/o/token/
      endSessionEndpoint: https://authentik.ciliumvalley.com/application/o/victorialogs/end-session/
    clientID: "victorialogs-envoy"
    clientSecret:
      name: authentik-victorialogs-oidc
    redirectURL: "https://victoria-logs.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/oauth2/logout"
    scopes:
      - openid
      - profile
      - email
